# docs/internal_swagger.yaml
@@ -2,9 +2,9 @@ basePath: /api/v1
 definitions:
   ErrorStruct:
     properties:
-      error_code:
+      ErrorCode:
         type: integer
-      error_message:
+      ErrorMessage:
         type: string
     type: object
   domain.City:
@@ -22,26 +22,6 @@ definitions:
       updated_at:
         type: string
     type: object
-  domain.GroupType:
-    enum:
-    - pensioners
-    - disabled
-    - young_families
-    - low_income
-    - students
-    - large_families
-    - children
-    - veterans
-    type: string
-    x-enum-varnames:
-    - UserGroupPensioners
-    - UserGroupDisabled
-    - UserGroupYoungFamilies
-    - UserGroupLowIncome
-    - UserGroupStudents
-    - UserGroupLargeFamilies
-    - UserGroupChildren
-    - UserGroupVeterans
   v1.benefitResponse:
     properties:
       description:
@@ -81,6 +61,12 @@ definitions:
         items:
           $ref: '#/definitions/v1.benefitResponse'
         type: array
+      limit:
+        type: integer
+      page:
+        type: integer
+      total:
+        type: integer
     type: object
   v1.exchangeTokenRequest:
     properties:
@@ -109,7 +95,7 @@ definitions:
         type: string
       group_type:
         items:
-          $ref: '#/definitions/domain.GroupType'
+          type: string
         type: array
       id:
         type: string
@@ -130,7 +116,7 @@ definitions:
         type: string
       group_type:
         items:
-          $ref: '#/definitions/domain.GroupType'
+          type: string
         type: array
     required:
     - city_id
@@ -146,7 +132,41 @@ paths:
     get:
       consumes:
       - application/json
-      description: Получить список всех льгот
+      description: Получить список всех льгот с пагинацией, фильтрацией и поиском
+      parameters:
+      - description: Номер страницы (по умолчанию 1)
+        in: query
+        name: page
+        type: integer
+      - description: Количество элементов на странице (по умолчанию 10, максимум 100)
+        in: query
+        name: limit
+        type: integer
+      - description: ID региона для фильтрации
+        in: query
+        name: region
+        type: integer
+      - description: Тип льготы (federal, regional, commercial)
+        in: query
+        name: type
+        type: string
+      - description: Целевые группы через запятую (pensioners, disabled, students
+          и т.д.)
+        in: query
+        name: target_groups
+        type: string
+      - description: Дата начала периода (YYYY-MM-DD)
+        in: query
+        name: date_from
+        type: string
+      - description: Дата окончания периода (YYYY-MM-DD)
+        in: query
+        name: date_to
+        type: string
+      - description: Поисковый запрос по названию и описанию
+        in: query
+        name: search
+        type: string
       produces:
       - application/json
       responses:
@@ -154,6 +174,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/v1.benefitsListResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/ErrorStruct'
         "500":
           description: Internal Server Error
           schema:
